refactor: Rewriting naming code to avoid use of unstable Java modules